sort.basic.lessons.sort.basic.gnome.AlgGnomeSort.scala.error
AlgGnomeSort:8: error: reassignment to val
			i = i + 1;
                          ^AlgGnomeSort:11: error: reassignment to val
			i = i - 1;
                          ^AlgGnomeSort:14: error: reassignment to val
		i = i - 1;			
                  ^